@@ -72,10 +72,11 @@ open_serial (char* devfile)
 	return fd;
 }
 
-void
+int
 close_serial (int unix_fd)
 {
-	close (unix_fd);
+	// Linus writes: do not retry close after EINTR
+	return close (unix_fd);
 }
 
 guint32
